themes/harassmap/assets/scss/blocks/_pagination.scss
@import "../variables";
@import "rem";

.pagination--container {
  text-align: center;

  .pagination {
    display: inline-block;
    text-align: center;

    li {
      background: $tundora;
      color: $white;
      border: 1px solid $green;
      cursor: pointer;
      display: inline-block;
      transition: background 0.1s linear;

      @include rem((font-size: 14px, margin: 0 10px 0 0));

      a {
        color: $white;
        display: block;

        @include rem((padding: 8px 20px));
      }

      &:hover {
        background: $green;
      }

      &.disabled, &.active {
        background: $white;
        color: $tundora;
        cursor: default;
        @include rem((padding: 8px 20px));

        &:hover {
          background: $white;
        }
      }
    }

  }

}

